<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.foxconn.bandon.custom.SingleOptionViewGroup
        android:id="@+id/cleaner_options"
        android:layout_width="350dp"
        android:layout_height="109dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="108dp"
        android:background="@drawable/bg_settings_tracker_big">

        <com.foxconn.bandon.custom.SingleOptionThumb
            android:id="@+id/thumb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_settings_tracker_btn" />

        <com.foxconn.bandon.custom.SingleOptionView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cleaner_off"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <com.foxconn.bandon.custom.SingleOptionView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cleaner_normal"
            android:textColor="#ffffff"
            android:textSize="30sp" />

<!--        <com.foxconn.bandon.custom.SingleOptionView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cleaner_extreme"
            android:textColor="#ffffff"
            android:textSize="30sp" />-->
    </com.foxconn.bandon.custom.SingleOptionViewGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="84dp"
            android:layout_height="36dp"
            android:layout_marginStart="88dp"
            android:background="@drawable/bg_setting_hit_title"
            android:gravity="center"
            android:text="@string/cleaner_normal"
            android:textColor="#414042"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/cleaner_normal_description"
            android:textColor="#414042"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="383dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="84dp"
            android:layout_height="36dp"
            android:layout_marginStart="88dp"
            android:background="@drawable/bg_setting_hit_title"
            android:gravity="center"
            android:text="@string/cleaner_extreme"
            android:textColor="#414042"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/cleaner_extreme_description"
            android:textColor="#414042"
            android:textSize="24sp" />
    </LinearLayout>

</FrameLayout>