<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:clickable="true"
    android:focusable="true">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="530dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@android:color/white"
        android:textSize="48sp" />

    <RelativeLayout
        android:id="@+id/area"
        android:layout_width="782dp"
        android:layout_height="356dp"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:background="@drawable/bg_wifi_detail_login_area_radius">

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="480dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_wifi_detail_login_border"
            android:hint="@string/wifi_detail_login_edit_hint"
            android:inputType="textPassword"
            android:paddingStart="35dp"
            android:paddingEnd="35dp"
            android:textColor="#D8D8D8"
            android:textColorHint="#C6C6C6"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_edit"
            android:layout_marginStart="188dp"
            android:layout_marginEnd="188dp"
            android:layout_marginTop="30dp"
            android:textColor="#4A4A4A"
            android:textSize="36sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/cancel"
        android:layout_width="260dp"
        android:layout_height="92dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/area"
        android:layout_marginStart="248dp"
        android:layout_marginTop="133dp"
        android:background="@drawable/btn_green_border_rounded"
        android:text="@string/wifi_detail_login_button_cancel"
        android:textColor="@drawable/btn_green_text"
        android:textSize="36sp" />

    <Button
        android:id="@+id/join"
        android:layout_width="260dp"
        android:layout_height="92dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/area"
        android:layout_marginEnd="248dp"
        android:layout_marginTop="133dp"
        android:background="@drawable/btn_gray_join"
        android:enabled="false"
        android:text="@string/wifi_detail_login_button_join"
        android:textColor="@drawable/btn_gray_text"
        android:textSize="36sp" />
</RelativeLayout>